force-org/sample/metadata/objects/Contact/fields/About_Me__c.field-meta.xml
<CustomField>
    <fullName>About_Me__c</fullName>
    <description>About Me Rich Text Field Created</description>
    <label>About Me</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>