force-org/sample/metadata/objects/Contact/fields/Community_Registration_Source__c.field-meta.xml
<CustomField>
    <fullName>Community_Registration_Source__c</fullName>
    <description>T-807614</description>
    <label>Community Registration Source</label>
    <length>40</length>
    <type>Text</type>
</CustomField>