force-org/sample/metadata/objects/Contact/fields/Hide_Welcome_Modal__c.field-meta.xml
<CustomField>
    <fullName>Hide_Welcome_Modal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hide Welcome Modal</label>
    <type>Checkbox</type>
</CustomField>