force-org/sample/metadata/objects/Contact/fields/Twitter_Profile__c.field-meta.xml
<CustomField>
    <fullName>Twitter_Profile__c</fullName>
    <label>Twitter Profile</label>
    <type>Url</type>
</CustomField>