force-org/sample/metadata/objects/Contact/fields/Visible_to_Community__c.field-meta.xml
<CustomField>
    <fullName>Visible_to_Community__c</fullName>
        <defaultValue>false</defaultValue>
        <description>T-807879</description>
        <label>Visible to Community</label>
        <type>Checkbox</type>
</CustomField>